--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>SLEEP IN TRAIN</h1>
             <h2>Experience sleeping in train with your favourite music playing in your headphones</h2>
             <div id="hedphones-div">
-                <h3>Use headphones (erphones) for better experience</h3>
+                <h3>Use headphones (earphones) for better experience</h3>
                 <img src="images/headphones-solid.svg" class="headphones">
             </div>
         </div>
