volume range controller design

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         <div id="play-train">
             <h2>Play train sound</h2>
             <button class="play"></button>
-            <input id="volume-control" type="range" min="0" max="100" value="50">
+            <span class="volume-box">
+                <img src="images/volume-off-solid.svg" title="no volume">
+                <input id="volume-control" type="range" min="0" max="100" value="50">  
+                <img src="images/volume-high-solid.svg" title="max volume">
+            </span>
+            
         </div>
         
         <div class="player-div" id="spotify">
